# rpc_c

./: .gitignore  CMakeCache.txt  CMakeLists.txt  a.out  client.cpp  client_stub.h  cmake_install.cmake  functions.h  functions.h.b  gen.cpp  macros.h  main.cpp  rpc  rpc_client  rpc_server
.cmake/api/v1/reply/: cache-v2-2bac708f22b229bc7733.json  cache-v2-934870708699c56ae36c.json  cmakeFiles-v1-38cc7e9916b41dfa692d.json  cmakeFiles-v1-84eea685fd6d770d4eab.json  codemodel-v2-9e218a34339b706edb19.json  codemodel-v2-e8fb3607aa92f3c571ce.json  index-2023-12-11T09-27-05-0735.json  index-2023-12-11T22-03-02-0253.json  target-rpc_client-69fd6c1696d6c154688b.json  target-rpc_client-dc85870b684e8866b58e.json  target-rpc_server-ad255dcf982a524d80d8.json  target-rpc_server-e8a27b873505990d28a1.json
